<resources>
    <string name="app_name">Camarerooo</string>
    <string name="table_name">Nombre mesa</string>
    <string name="num_diners">Número de comensales</string>
    <string name="cancel">CANCELAR</string>
    <string name="add_table">AÑADIR MESA</string>
    <string name="please_input">Por favor introduzca los datos de la nueva mesa</string>
    <string name="title_activity_table">TableActivity</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_dish">DishActivity</string>
    <string name="notes">Notas</string>
    <string name="add">AÑADIR</string>
</resources>
